package patternBasic;

public interface Component {

    public abstract void doSomething();

}
