@startuml

title __COMPOSITEESTUDIANTS's Class Diagram__\n

  namespace examples.directories {
    class examples.directories.Directory {
    }
  }
  

  namespace examples.directories {
    abstract class examples.directories.File {
    }
  }
  

  namespace examples.directories {
    class examples.directories.FileSystem {
    }
  }
  

  namespace examples.directories {
    class examples.directories.FileSystemTestDrive {
    }
  }
  

  namespace examples.directories {
    class examples.directories.SimpleFile {
    }
  }
  

  namespace examples.menu {
    class examples.menu.Client {
    }
  }
  

  namespace examples.menu {
    abstract class examples.menu.MenuComponent {
    }
  }
  

  namespace examples.menu {
    class examples.menu.MenuComposite {
    }
  }
  

  namespace examples.menu {
    class examples.menu.MenuItem {
    }
  }
  

  namespace examples.menu {
    class examples.menu.MenuTestDrive {
    }
  }
  

  namespace pattern {
    abstract class pattern.Component {
    }
  }
  

  namespace pattern {
    class pattern.Composite {
    }
  }
  

  namespace pattern {
    class pattern.CompositeTest {
    }
  }
  

  namespace pattern {
    class pattern.Leaf {
    }
  }
  

  namespace pattern {
    namespace asic {
      interface patternBasic.Component {
      }
    }
  }
  

  namespace pattern {
    namespace asic {
      class patternBasic.Composite {
      }
    }
  }
  

  namespace pattern {
    namespace asic {
      class patternBasic.CompositeTest {
      }
    }
  }
  

  namespace pattern {
    namespace asic {
      class patternBasic.Leaf {
      }
    }
  }
  

  examples.directories.Directory -up-|> examples.directories.File
  examples.directories.FileSystem o-- examples.directories.File : allFiles
  examples.directories.SimpleFile -up-|> examples.directories.File
  examples.menu.Client o-- examples.menu.MenuComponent : allMenus
  examples.menu.MenuComposite -up-|> examples.menu.MenuComponent
  examples.menu.MenuItem -up-|> examples.menu.MenuComponent
  pattern.Composite -up-|> pattern.Component
  pattern.Leaf -up-|> pattern.Component
  patternBasic.Composite .up.|> patternBasic.Component
  patternBasic.Leaf .up.|> patternBasic.Component


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
